    * Replace `distutils` with direct `setuptools` equivalents where possible (#2134, @Avasam)
* Replaced usages of the removed (in Python 3.12) `imp` module (#2113, @Avasam)
  * Fixed registering Python as a scripting language for `axscript`
  * Fixed `isapi` install
* Use collection literals and comprehensions where applicable (slight performance improvement) (#2108, @Avasam)
* Cleanup obsolete code for unsupported Python versions (#1990, #2127, #2205, @Avasam)
  The following public names have been removed:
    * `pywin.framework.app.Win32RawInput`
    * `win32com.client.makepy.error`
    * Long obsoleted `dbi` module, use the `odbc` module instead
  Added support for the following Python 3 methods:
    * `pywin.mfc.dialog.Dialog.__contains__`
    * `win32com.client.CoClassBaseClass.__bool__`
    * `win32com.client.combrowse.HLIRoot.__lt__`
    * `win32com.client.genpy.WritableItem.__lt__`
    * `__bool__` in classes generated by `win32com.client.genpy.WritableItem.WriteClassBody`
    * `win32/Demos`'s `win32clipboardDemo.Foo.__lt__`
    * `win32timezone._SimpleStruct.__le__` (subclassed by `SYSTEMTIME`, `TIME_ZONE_INFORMATION`, `DYNAMIC_TIME_ZONE_INFORMATION`, `TimeZoneDefinition`)
  The following methods no longer throw errors (although their implementation is still unvalidated):
    * `winnt.PRIMARYLANGID`
    * `winnt.SUBLANGID`
    * `winnt.LANGIDFROMLCID`
    * `winnt.SORTIDFROMLCID`
* Removed obsolete compatibility aliases (#2087, @Avasam)
  The following public names have been removed:
    * `win32comext.mapi.mapiutil.TupleType`
    * `win32comext.mapi.mapiutil.ListType`
    * `win32comext.mapi.mapiutil.IntType`
    * `netbios.byte_to_int`
* Resolved invalid string escapes warnings (#2045, #2124, @Avasam)
* Idiomatic type comparisons. Better handling of subclasses. (#1991, @Avasam)
* Cleaned up obsolete and redundant code (this should not directly affect the end-user):
  * Update and standardise obsolete `OSError` aliases (#2107, @Avasam)