@@ -24,13 +24,10 @@ import pythoncom
 import winerror
 from pywintypes import TimeType
 
-
 # It isn't really clear what the quoting rules are in a C/IDL string and
 # literals like a quote char and backslashes makes life a little painful to
 # always render the string perfectly - so just punt and fall-back to a repr()
-def _makeDocString(s):
-    return repr(s)
-
+_makeDocString = repr
 
 error = "PythonCOM.Client.Build error"
 
